homelab/circuit-breaking/resilience-break/dr-outlier-detection.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vertx-greet
  namespace: resilience-break
spec:
  host: vertx-greet
  trafficPolicy:
    outlierDetection:
      baseEjectionTime: 10.000s
      consecutive5xxErrors: 2
      interval: 2.000s
      maxEjectionPercent: 100
